tests/fail/namespace-att1.dit
A {
    String value;
}

B {
    String value;
}

B b;
b.value = 'test';

A a;

a.value = b;